# Portfolio-Collection

./: CONTRIBUTING.md  Jaspreet-Singh-Portfolio  Portfolio-hacktober.html  README.md  Sahil_resume.html  Yash_CV.docx  achievements.html  app.js  armstrongno.py  calculator.py  changelog.txt  data.json  factorial.py  index.html  inner-page.html  intro.html  package-lock.json  package.json  patient.html  pesquisa.html  pesquisa.js  portfolio-details.html  portfolio.html  quiz.py  sample.html  script.js  style.css  styles.css  submissions.html
ANKIT KUMAR/: Style.css  index.html
Aaditya Raj/: README.md  index.html
Abhay Parihar/: app.js  package-lock.json  package.json
Abhinav  portfolio/: README.md  index.html  script.js  styles.css
Abhinav Naman/: index.html  style.css
Abhishek Portfolio/: app.js  contact.html  index.html  resume.txt  style.css
Abhishek Tyagi/: 404.html  README.md  index.html
Adhiraj Pawar/: README.md  index.html
Aditya Chaki/: index.css  index.html  portfolio.js
Aditya Prakash/: index.html  script.js  style.css
Afraz Khan/: README.md  jsonviewlibs.txt  package-lock.json  package.json
Agneya Pathare/: index.html  style.css
Aiman_Aisha/: index.html  style.css
Ajay Dahiya/: License free.txt  index.html  slnx.sqlite  style.css
Akshat Talwar/: index.html  package-lock.json  package.json  projects.html
Alex-main/: index.html
Amin Tai/: about.html  contact.html  index.html  work.html
Amit Maity/: 404.html  README.md  dsa.json  index.html  skills.json
Aniket Pal/: main.py  pyproject.toml
Aniket Pal/templates/: index.html
(+1363 files in other folders)
